--- a/web/templates/admin_scraping.html
+++ b/web/templates/admin_scraping.html
@@ -54,8 +54,9 @@
       <a href="/" class="{% if active_page == 'dashboard' %}active{% endif %}">Dashboard</a>
       <a href="/admin_scraping" class="{% if active_page == 'scraping' %}active{% endif %}">Scraping</a>
       <a href="/data_komentar" class="{% if active_page == 'settings' %}active{% endif %}">Data Uji</a>
-      <a href="/open_data_latih" class="{% if active_page == 'settings' %}active{% endif %}">Buka Data Latih</a>
-      <a href="/open_data_uji" class="{% if active_page == 'settings' %}active{% endif %}">Buka Data Uji</a>
+      <a href="/data_latih" class="{% if active_page == 'settings' %}active{% endif %}">Data Latih</a>
+      <a href="/open_data_latih" target="_blank"  class="{% if active_page == 'settings' %}active{% endif %}">Buka Data Latih</a>
+      <a href="/open_data_uji" target="_blank" class="{% if active_page == 'settings' %}active{% endif %}">Buka Data Uji</a>
     </div>
 
     <!-- Content Area -->
@@ -64,22 +65,7 @@
 
 
       <!-- Navbar -->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Admin - Scraping Data</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Profile</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+      
 
       <!-- Scraping Form -->
       <div class="container-fluid mt-5">
