--- a/web/templates/admin_data_latih.html
+++ b/web/templates/admin_data_latih.html
@@ -16,10 +16,11 @@
     <div class="sidebar">
       <h4 class="text-center">Admin Panel</h4>
       <a href="/" class="{% if active_page == 'dashboard' %}active{% endif %}">Dashboard</a>
-      <a href="/admin_scraping" class="{% if active_page == 'scraping' %}active{% endif %}">Scraping</a>
+      <!-- <a href="/admin_scraping" class="{% if active_page == 'scraping' %}active{% endif %}">Scraping</a> -->
+      <a href="/tfidf_results" class="{% if active_page == 'scraping' %}active{% endif %}">TF-IDF</a>
       <a href="/data_komentar" class="{% if active_page == 'settings' %}active{% endif %}">Data Uji</a>
       <a href="/data_latih" class="{% if active_page == 'settings' %}active{% endif %}">Data Latih</a>
-      <a href="/open_data_latih" target="_blank"  class="{% if active_page == 'settings' %}active{% endif %}">Buka Data Latih</a>
+      <a href="/open_data_latih" target="_blank" class="{% if active_page == 'settings' %}active{% endif %}">Buka Data Latih</a>
       <a href="/open_data_uji" target="_blank" class="{% if active_page == 'settings' %}active{% endif %}">Buka Data Uji</a>
     </div>
 
