--- a/web/templates/admin_data_latih.html
+++ b/web/templates/admin_data_latih.html
@@ -15,7 +15,7 @@
     <!-- Sidebar -->
     <div class="sidebar">
       <h4 class="text-center">Admin Panel</h4>
-      <a href="/" class="{% if active_page == 'dashboard' %}active{% endif %}">Dashboard</a>
+      <a href="/" class="{% if active_page == 'dashboard' %}active{% endif %}">Hasil Prediksi</a>
       <!-- <a href="/admin_scraping" class="{% if active_page == 'scraping' %}active{% endif %}">Scraping</a> -->
       <a href="/tfidf_results" class="{% if active_page == 'scraping' %}active{% endif %}">TF-IDF</a>
       <a href="/data_komentar" class="{% if active_page == 'settings' %}active{% endif %}">Data Uji</a>
@@ -108,18 +108,16 @@
               sentimentFrequency.positive++;
             } else if (item.sentimen === 'negatif') {
               sentimentFrequency.negative++;
-            } else if (item.sentimen === 'netral') {
-              sentimentFrequency.neutral++;
-            }
+            } 
           });
 
           // Render Plotly chart for sentiment frequency
             const sentimentData = {
-            x: ['Positive', 'Negative', 'Neutral'], // Sentiment labels
+            x: ['Positive', 'Negative'], // Sentiment labels
             y: [sentimentFrequency.positive, sentimentFrequency.negative, sentimentFrequency.neutral], // Frequency of each sentiment
             type: 'bar', // Change from 'pie' to 'bar' for bar chart
             marker: {
-                color: ['#28a745', '#dc3545', '#ffc107'] // Optional: Color for each bar
+                color: ['#28a745', '#dc3545'] // Optional: Color for each bar
             }
             };
 
