--- a/web/templates/admin_index.html
+++ b/web/templates/admin_index.html
@@ -159,7 +159,7 @@
         ];
 
         const layout = {
-          title: 'Jumlah Data Positif dan Negatif',
+          title: 'Hasil Analisa Sentimen',
           xaxis: { title: 'Sentimen' },
           yaxis: { title: 'Jumlah' },
           barmode: 'group'
@@ -221,7 +221,7 @@ async function getDataLatihInfo() {
         ];
         
         const layout = {
-        title: 'Jumlah Data Latih Positif dan Negatif',
+        title: 'Frekuensi Data',
         xaxis: { title: 'Sentimen' },
         yaxis: { title: 'Jumlah' },
         barmode: 'group'
